kubernetes/apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      enableServiceLinks: true
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 0
        supplementalGroups:
          - 105
      containers:
      - name: jellyfin
        image: linuxserver/jellyfin:latest
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1500m
            memory: 2Gi
        ports:
        - containerPort: 8096
          name: http
        volumeMounts:
        - name: jellyfin-data
          mountPath: /config
        - name: jellyfin-movies
          mountPath: /data/movies
        - name: jellyfin-tv
          mountPath: /data/tv
        - name: jellyfin-channels
          mountPath: /data/channels
      volumes:
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-data
      - name: jellyfin-movies
        persistentVolumeClaim:
          claimName: jellyfin-movies
      - name: jellyfin-tv
        persistentVolumeClaim:
          claimName: jellyfin-tv
      - name: jellyfin-channels
        persistentVolumeClaim:
          claimName: jellyfin-channels
