kubernetes/apps/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    targetPort: 8096
    protocol: TCP
