kubernetes/apps/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tv.${CLUSTER_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: efym-net-tls
